~ replaced 'String.format' by '.formatted' calls